dev/webpage/webpage-service.yml
apiVersion: v1
kind: Service
metadata:
  name: webpage-service
  namespace: dev
spec:
  selector:
    app: webpage
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
